Updated APIs